--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         function StartAud(url) {
             new Audio(url).play();
         }
-        alert("Folders are Empty")
+        alert("Folders are Empty - Coded by WolfHex")
     </script>
 </body>
 
